--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Montserrat;
 }
 
 
-body{
+body {
     background-color: #005380;
 }
 
-.main{
+.main {
     display: flex;
     margin-left: 15%;
     margin-right: 10%;
@@ -19,12 +19,12 @@ body{
     gap: 100px;
 }
 
-.logoFafiltec{
+.logoFafiltec {
     width: 8rem;
     height: 8rem;
 }
 
-.main-title{
+.main-title {
     width: 93%;
     color: white;
     font-weight: 400;
@@ -32,7 +32,7 @@ body{
     font-size: 40px;
 }
 
-.title{
+.title {
     margin-top: 40px;
 }
 
@@ -53,15 +53,15 @@ body{
     font-size: 14px;
 }
 
-.box>div:nth-child(2){
+.box>div:nth-child(2) {
     font-weight: 800;
 }
 
-.box i{
-   margin-bottom: 10px;
+.box i {
+    margin-bottom: 10px;
 }
 
-.button-orange{
+.button-orange {
     background-color: #f1900e;
     color: white;
     padding: 5px;
@@ -73,31 +73,31 @@ body{
     margin-bottom: 30px;
 }
 
-.button-orange:hover{
+.button-orange:hover {
     background-color: #da7f08;
 }
 
 
-.span-bold{
+.span-bold {
     font-weight: bold;
 }
 
-.fa-chalkboard-user, .fa-graduation-cap, .fa-calendar{
+.fa-chalkboard-user, .fa-graduation-cap, .fa-calendar {
     font-size: 30px;
 }
 
-.main-left{
+.main-left {
     display: flex;
     flex-direction: column;
 }
 
-.main-left-text{
-    color: white;  
+.main-left-text {
+    color: white;
     font-weight: 400;
     font-size: 40px;
 }
 
-.photo-main{
+.photo-main {
     width: 80%;
     height: 80%;
 }
@@ -105,7 +105,7 @@ body{
 
 
 
-.button-orange2{
+.button-orange2 {
     background-color: #f1900e;
     color: white;
     padding: 5px;
@@ -116,12 +116,12 @@ body{
     text-align: center;
 }
 
-.button-orange2:hover{
+.button-orange2:hover {
     background-color: #da7f08;
 }
 
 
-a{
+a {
     text-decoration: none;
     color: white;
 }
@@ -133,71 +133,71 @@ a{
     gap: 20px;
     background-color: white;
     padding: 90px;
-  }
-  
-  .row {
+}
+
+.row {
     display: flex;
     justify-content: space-around;
     width: 100%;
-  }
-  
-  .box2 {
+}
+
+.box2 {
     width: 320px;
     padding: 20px;
     border-radius: 10px;
     color: #005380;
-  }
-  
-  .box2 i {
+}
+
+.box2 i {
     font-size: 50px;
     margin-bottom: 10px;
-  }
-  
-  .box2 p {
-    font-size: 20px;
-  }
+}
 
-  .box2 h1{
+.box2 p {
+    font-size: 20px;
+}
+
+.box2 h1 {
     font-size: 50px;
     font-weight: 400;
-  }
-  
-  .span-bold {
+}
+
+.span-bold {
     font-weight: bold;
-  }
+}
 
 
-.info-container{
+.info-container {
     background-color: white;
     color: #005380;
     text-align: right;
     padding: 90px 120px 0 90px;
 }
 
-.info-container h1{
+.info-container h1 {
     font-weight: 400;
     font-size: 50px;
 }
 
-.info-container-content{
+.info-container-content {
     background-color: white;
     color: #005380;
     display: flex;
     padding: 90px;
 }
 
-.info-container-content-left{
+.info-container-content-left {
     font-size: 20px;
     max-width: 50%;
     padding: 30px;
 }
 
-.info-container-content-left h2{
+.info-container-content-left h2 {
     margin-bottom: 10px;
 }
 
 
-.info-container-content-right{
+.info-container-content-right {
     background-color: #eee;
     padding: 40px;
     border-radius: 20px;
@@ -205,31 +205,31 @@ a{
     font-weight: bold;
 }
 
-.info-container-content-right h1{
+.info-container-content-right h1 {
     font-weight: 400;
 }
 
 
-.info-container-content-right-date{
+.info-container-content-right-date {
     font-size: 10px;
     margin-bottom: 10px;
 }
 
-.info-container-content-right-price{
+.info-container-content-right-price {
     font-size: 40px;
 }
 
-.info-container-content-right-monthly{
+.info-container-content-right-monthly {
     font-weight: 400;
     font-size: 20px;
 }
 
-.extra-bold{
+.extra-bold {
     font-weight: bold;
     font-size: 80px;
 }
 
-.button-orange3{
+.button-orange3 {
     background-color: #f1900e;
     color: white;
     padding: 5px;
@@ -242,18 +242,18 @@ a{
     font-size: 19px;
 }
 
-.button-orange3:hover{
+.button-orange3:hover {
     background-color: #da7f08;
 }
 
-.info-container2{
+.info-container2 {
     background-color: white;
     color: #005380;
     text-align: left;
     padding: 90px 90px 0 90px;
 }
 
-.info-container2 h1{
+.info-container2 h1 {
     font-weight: 400;
     font-size: 50px;
 }
@@ -265,14 +265,14 @@ a{
     gap: 20px;
     background-color: white;
     padding: 20px;
-  }
-  
-  .row2 {
+}
+
+.row2 {
     display: flex;
     justify-content: space-around;
-  }
-  
-  .box3 {
+}
+
+.box3 {
     width: 340px;
     padding: 20px;
 }
@@ -311,7 +311,7 @@ a{
     transform: translateX(-50%);
     width: 120px;
     height: 20px;
-    background-color:#005380;
+    background-color: #005380;
     color: white;
     padding: 15px;
     border-radius: 10px;
@@ -319,7 +319,7 @@ a{
 }
 
 
-.button-orange4{
+.button-orange4 {
     position: absolute;
     background-color: #f1900e;
     color: white;
@@ -332,11 +332,11 @@ a{
     margin-bottom: 30px;
 }
 
-.button-orange4:hover{
+.button-orange4:hover {
     background-color: #da7f08;
 }
 
-.info-container3{
+.info-container3 {
     background-color: #005380;
     color: white;
     text-align: left;
@@ -344,12 +344,12 @@ a{
     margin-bottom: 30px;
 }
 
-.info-container3 h1{
+.info-container3 h1 {
     font-weight: 400;
     font-size: 50px;
 }
 
-.button-orange5{
+.button-orange5 {
     background-color: #f1900e;
     color: white;
     padding: 5px;
@@ -360,12 +360,12 @@ a{
     text-align: center;
 }
 
-.button-orange5:hover{
+.button-orange5:hover {
     background-color: #da7f08;
 }
 
 .orange-area {
-    background-color:#f1900e;
+    background-color: #f1900e;
     padding: 60px;
     display: flex;
     justify-content: center;
@@ -377,34 +377,34 @@ a{
 
 
 .orange-area-btn1 {
-    background-color:#005380;
-    color:white;
+    background-color: #005380;
+    color: white;
     padding: 20px 20px;
     text-decoration: none;
     margin: 0 10px;
     border-radius: 5px;
-    
+
 }
 
 .orange-area-btn2 {
-    background-color:white;
-    color:#005380;
+    background-color: white;
+    color: #005380;
     padding: 20px 20px;
     text-decoration: none;
     margin: 0 10px;
     border-radius: 5px;
 }
 
-.orange-area-btn1:hover{
-    background-color:#014264;
+.orange-area-btn1:hover {
+    background-color: #014264;
 }
 
-.orange-area-btn2:hover{
-    background-color:rgb(209, 209, 209);
+.orange-area-btn2:hover {
+    background-color: rgb(209, 209, 209);
 }
 
 
-.info-matriz2{
+.info-matriz2 {
     font-size: 35px;
     font-weight: 400;
     text-align: center;
@@ -417,21 +417,21 @@ a{
     padding: 50px;
     border-radius: 10px;
     margin: 30px auto;
-  }
+}
 
-  .form-group {
+.form-group {
     margin-bottom: 15px;
-  }
+}
 
-  .input-text {
+.input-text {
     width: calc(100% - 10px);
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
     box-sizing: border-box;
-  }
+}
 
-  .btn-inscrever {
+.btn-inscrever {
     width: 100%;
     padding: 10px;
     border: none;
@@ -440,22 +440,22 @@ a{
     color: white;
     font-size: 16px;
     cursor: pointer;
-  }
+}
 
-  .btn-inscrever:hover {
+.btn-inscrever:hover {
     background-color: #da7f08;
-  }
+}
 
 
-  .form-checkbox {
+.form-checkbox {
     display: inline-block;
 }
 
-.form-checkbox a{
+.form-checkbox a {
     color: #005380;
 }
 
-.form-checkbox a:hover{
+.form-checkbox a:hover {
     color: #f1900e;
 }
 
@@ -463,7 +463,7 @@ a{
 .text-container {
     position: relative;
     padding: 10px;
-    line-height: 1.5; 
+    line-height: 1.5;
     cursor: pointer;
     display: inline-block;
     vertical-align: middle;
@@ -478,7 +478,8 @@ a{
 .checkmark {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%); /* Centraliza verticalmente */
+    transform: translateY(-50%);
+    /* Centraliza verticalmente */
     left: 0;
     height: 20px;
     width: 20px;
@@ -486,7 +487,7 @@ a{
     border-radius: 3px;
 }
 
-.text-container input:checked ~ .checkmark:after {
+.text-container input:checked~.checkmark:after {
     content: "";
     position: absolute;
     display: block;
@@ -500,165 +501,172 @@ a{
 }
 
 .text-container p {
-    margin-left: 30px; /* Espaço para o ícone */
+    margin-left: 30px;
+    /* Espaço para o ícone */
 }
+
+
+.whats {
+    position: fixed;
+    bottom: 75px;
+    right: 50px;
+    z-index: 9999;
+}
+
 
 
 /* RESPONSIVE MEDIA */
 
-@media (max-width: 1100px){
-    .main{
+@media (max-width: 1100px) {
+    .main {
         flex-wrap: wrap;
         margin-left: 0;
         margin-right: 0;
         padding: 10px;
     }
 
-    .title{
+    .title {
         width: 100%;
     }
 
-    .box{
+    .box {
         padding: 15px 30px 10px 9px;
     }
 
-    .button-orange{
+    .button-orange {
         margin: 0 auto;
     }
 
-    .main-left{
+    .main-left {
         text-align: center;
     }
 
-    .photo-main{
+    .photo-main {
         width: 100%;
     }
 
-    .row2{
+    .row2 {
         flex-direction: column;
     }
 
-    .row{
+    .row {
         flex-direction: column;
     }
 
-    .container-info{
+    .container-info {
         flex-direction: column;
         padding: 0;
     }
 
-    .container{
+    .container {
         padding: 34px;
     }
 
-    .column{
+    .column {
         width: 100%;
     }
 
-    .button-orange4{
+    .button-orange4 {
         position: relative;
         max-width: 50%;
         left: 23%;
     }
 
-    .box3{
+    .box3 {
         width: 100%;
     }
 
-    .button-orange2{
+    .button-orange2 {
         max-width: 50%;
     }
 
-    .form-container{
+    .form-container {
         width: 83%;
         padding: 25px;
     }
 
-    .info-container{
+    .info-container {
         padding: 30px;
     }
-    
-    .info-container h1{
+
+    .info-container h1 {
         font-size: 35px;
     }
 
-    .info-container-content{
+    .info-container-content {
         flex-direction: column-reverse;
         padding: 0;
         align-items: center;
     }
 
-    .info-container-content-left{
+    .info-container-content-left {
         max-width: 100%;
     }
 
-    .info-container-content-right{
+    .info-container-content-right {
         margin: 30px;
         padding: 39px;
     }
 
-    .info-container2{
+    .info-container2 {
         padding: 30px;
     }
 
-    .info-container2 h1{
+    .info-container2 h1 {
         font-size: 35px;
     }
-    
+
     .info-container3 {
         padding: 10px;
     }
 
 
-    .info-container3 img{
+    .info-container3 img {
         width: 60%;
         margin-left: 100px;
     }
 
-    .info-container3 h1{
+    .info-container3 h1 {
         font-size: 20px;
         margin: 10px;
         text-align: center;
     }
 
-    .button-orange5{
+    .button-orange5 {
         max-width: 40%;
         padding: 3px;
         font-size: 12px;
     }
 
-    .orange-area{
+    .orange-area {
         flex-direction: column;
         gap: 10px;
         font-size: 15px;
     }
 
-    .logoFafiltec{
+    .logoFafiltec {
         margin-left: 130px;
     }
 
-    .main-left{
+    .main-left {
         display: none;
     }
-    
-    .main-left-mobile{
+
+    .main-left-mobile {
         display: flex;
         text-align: center;
         margin-top: 30px;
     }
 }
 
-@media (min-width: 1625px){
-    .main-left-mobile{
+@media (min-width: 1625px) {
+    .main-left-mobile {
         display: none;
     }
 }
 
-@media (min-width: 500px){
-    .main-left-mobile{
+@media (min-width: 500px) {
+    .main-left-mobile {
         display: none;
     }
 }
-
-
-
