--- a/style.css
+++ b/style.css
@@ -657,6 +657,10 @@ a {
         text-align: center;
         margin-top: 30px;
     }
+
+    .whats{
+        right: 20px;
+    }
 }
 
 @media (min-width: 1625px) {
@@ -669,4 +673,5 @@ a {
     .main-left-mobile {
         display: none;
     }
+
 }
